--- a/src/resources/sass/blocks/promotion/_promotion-split.scss
+++ b/src/resources/sass/blocks/promotion/_promotion-split.scss
@@ -1,4 +1,9 @@
 .block-promotion--split {
+	&.flex-top {
+		@include max-screen($screen-sm-max) {
+			justify-content: flex-end;
+		}
+	}
 }
 
 .block-promotion__content--split {
